Added a few Articles. MVP Done

--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
       </div>
     </div>
 
+    <div class="card" data-tab="javascript">
+      <div class="headline">The Essential JavaScript</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/bones.jpg" />
+        </div>
+        <span>By Marcus Aurelius</span>
+      </div>
+    </div>
+
     <div class="card" data-tab="bootstrap">
       <div class="headline">Bootstrap 5: Get a Sneak Peak at all the New Features</div>
       <div class="author">
@@ -90,6 +100,16 @@
           <img src="./assets/fido.jpg" />
         </div>
         <span>By FIDO WALKSALOT</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="bootstrap">
+      <div class="headline">Bootstrap 5: The New HTML Standard. Learn More Here</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/fido.jpg" />
+        </div>
+        <span>By Mace Windu</span>
       </div>
     </div>
 
@@ -103,6 +123,16 @@
       </div>
     </div>
 
+    <div class="card" data-tab="technology">
+      <div class="headline">Is Technology Killing us? Here is what people believe</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By Unknown Soldier</span>
+      </div>
+    </div>
+
     <div class="card" data-tab="jquery">
       <div class="headline">History of Javascript Libraries: from jQuery to React</div>
       <div class="author">
@@ -110,6 +140,16 @@
           <img src="./assets/puppers.jpg" />
         </div>
         <span>By PUPPER S. DOGGO</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="jquery">
+      <div class="headline">Jquery is Dead. GreenSock is the future</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/puppers.jpg" />
+        </div>
+        <span>By Ken Bone</span>
       </div>
     </div>
 
@@ -130,6 +170,16 @@
           <img src="./assets/sir.jpg" />
         </div>
         <span>By SIR RUFF'N'STUFF</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="node">
+      <div class="headline">Essential Node.js Learn all here</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/sir.jpg" />
+        </div>
+        <span>By Rick Flair</span>
       </div>
     </div>
 
